--- a/main.tex
+++ b/main.tex
@@ -180,7 +180,7 @@ virtualization
 
 \secondabstract
 Celem tej pracy było uruchomienie systemu operacyjnego PenPoint na współczesnym
-sprzęcie komputerowym, w ten sposób aby dało się z niego korzystać z komfortową
+sprzęcie komputerowym, w ten sposób, aby dało się z niego korzystać z komfortową
 wydajnością, i opisać proces w jaki zostało to osiągnięte.
 
 Początek tej pracy jest poświęcony opisowi czym PenPoint OS jest i jego znaczeniu
