--- a/tex/02-goal.tex
+++ b/tex/02-goal.tex
@@ -40,14 +40,14 @@ digital preservation of the PenPoint Operating System.
 % - remaking of schubiger solution
 
 Unfortunately there is not much interest in the revival oft the PenPoint
-operating system.  Sadly it is pretty much a forgotten system.  The only other
+operating system.  Sadly, it is pretty much a forgotten system.  The only other
 effort I came across that was dedicated to making PenPoint accessible and
 usable again was the project of professor Simon Schubiger.
 
 What makes this task difficult is how many different version of PenPoint there
 were.  PenPoint OS was released for a variety of computers, and most of them
 had some special, rather unique components.  To make it worse, a lot of
-information about that specific hardware is probably lost to time; whats more
+information about that specific hardware is probably lost to time; what is more,
 so are the copies of PenPoint installation media for many of these devices.
 
 There are many possible strategies when it comes to making software accessible
@@ -55,19 +55,19 @@ for a platform that this software was not intended for originally.  Sometimes
 it is possible to modify parts of the source code to port it or even rewrite
 the whole thing from scratch if preferable and necessary.  This is almost
 always not possible and not feasible.  When the source and destination
-platforms are similar enough some sort of compatibility layer can be used.
+platforms are similar enough, some sort of compatibility layer can be used.
 Wine works this way to allow running Windows applications on Unix-like systems.
 However the most popular and versatile tool for this task is an emulator.
 There is a great deal of variety in the available emulators, many of them aim
 to solve different, sometimes contradictory problems.  The two most popular
-open-source and libre emulators are QEMU and VirtualBox.  The goals of the
-former is performance, the goals of the latter is compatibility and best
+open-source and libre emulators are QEMU and VirtualBox.  The goal of the
+former is performance, the goal of the latter is compatibility and best
 possible experience out of the box.
 
 Professor Simon Schubiger chose the JPC emulator.  The JPC emulator is
 a relatively simple emulator, especially compared to such programs as QEMU, and
 it is written in Java.  These features made it easy to create a runnable proof
-of concept implementation that allowed to access PenPoint OS.  Unfortunately it
+of concept implementation that allowed to access PenPoint OS.  Unfortunately, it
 was not good enough for actual usage.  It was, however, a starting point.  In
 the following sections I will describe in greater detail what JPC is, the
 modifications created by professor Simon Schubiger, and the attempt to recreate
