--- a/tex/03-modifying-qemu.tex
+++ b/tex/03-modifying-qemu.tex
@@ -12,7 +12,7 @@ created by prof. Schubiger to the QEMU source.
 \subsection{PenPoint for NCR 3125 tablet}
 
 The creators of PenPoint knew that wide adoption would be hard if the barrier
-to entry were high. That's why many different versions of PenPoint were created
+to entry were high. That is why many different versions of PenPoint were created
 that could be installed and run on a variety of hardware \cite{carr1991}.
 
 One of those devices was a NCR 3125 \ref{fig:ncr3125} tablet. Although many
@@ -21,7 +21,7 @@ second pen based computer, the first computer with an external pen
 \cite{hohl2014}, and the first pen based computer powerful enough to run
 desktop programs like spreadsheet and graphing software \cite{mcdonald2011}.
 All of this came at a price - it was one of the most expensive computers
-released at the time \cite{hohl2014}. Apart from PenPoint the NCR 3125 also run
+released at the time \cite{hohl2014}. Apart from PenPoint, the NCR 3125 also run
 MS-DOS with NCR PenOS - proprietary NCR software that allowed for text input
 using the stylus, as well as Windows for Pen Computing and GRiD PenRight
 \cite{stengel}.
@@ -50,14 +50,14 @@ the PenPoint OS version for it an appropriate choice for emulation.
 \subsection{The JPC emulator}
 
 JPC was created by the University of Oxford's Particle Physics Subdepartment.
-Although its github page claims it is fast it was not its main concern. The
-advertised features are the flexibility, security and it being cross-platform
+Although its github page claims it is fast, it was not its main concern. The
+advertised features are the flexibility, security, and it being cross-platform,
 given that it is written in 100\% JAVA programming language. These come however
 at a cost. The JAVA environment makes it so that JPC can run virtually on any
-hardware that JVM is available for, and the memory safety provided by the JVM
-as well as sandboxing provide great security. This however comes at a cost, it
+hardware that JVM is available for, and the memory safety provided by the JVM,
+as well as sandboxing provide great security. This, however, comes at a cost, it
 will most certainly be much slower than a highly optimised emulator written in
-a systems programming language like C or C++. In fact the JPC emulator was too
+a systems programming language like C or C++. In fact, the JPC emulator was too
 slow to run PenPoint OS at a speed that would be comfortable for use - the
 video showing the operation of PenPoint on JPC on professor's Schubiger channel
 had to be sped up to look normal \cite{schubiger2015}.
@@ -72,8 +72,8 @@ The architecture of the JPC emulator is somewhat simple, at least when it comes
 to such complex software as a virtual machine. There is a class PC that models
 the machine being emulated. It stores all the components and manages them. It
 uses a different class implementing the PCConfig interface to provide
-configuration. The main function processes the input arguments and based on
-them initialises object of the \emph{PC} class. Input arguments control such things
+configuration. The main function processes the input arguments and, based on
+them, initialises object of the \emph{PC} class. Input arguments control such things
 as setting which files are used as harddrives or floppies, as well as choosing
 the boot device out of them.
 
@@ -127,7 +127,7 @@ The responsibility of the configuration provider class is to add all the
 necessary objects representing hardware components to the PC class object. It
 does so in four steps using methods \emph{configureMotherboard},
 \emph{configurePeripherals}, \emph{configurePCI}, and \emph{configureBIOS}. The
-meaning of these functions is rather superficial as all of them add instances
+meaning of these functions is rather superficial, as all of them add instances
 of classes implementing \emph{HardwareComponent} interface to the list of all
 components managed by the PC class object.
 
@@ -169,7 +169,7 @@ components managed by the PC class object.
 
 
 The next step is the setting up of all of the managed devices. In the
-configuration phase all components are made aware of all the other components
+configuration phase all components are made aware of all the other components,
 so that they can initialise themselves and establish relations. Here all
 devices must connect to the buses, displays and ports as they require. This is
 done by repeatedly calling each of the components' method \emph{acceptComponent} to
@@ -221,7 +221,7 @@ initialised.
 Then also auto-configuration of all PCI devices that is normally done by BIOS
 is performed by calling \emph{biosInit} method on all components that are
 instances of \emph{PCIBus} class. At this point all the PCI buses are aware of
-the PCI connected devices as they were supposed to register themselves in their
+the PCI connected devices, as they were supposed to register themselves in their
 \emph{acceptComponent}.
 
 \begin{codeblock}
@@ -253,14 +253,14 @@ the PCI connected devices as they were supposed to register themselves in their
 %\end{minipage}
 
 Inside \emph{biosInit} the bus initialises devices based on their device class,
-vendor and device IDs as well as based on if it uses an I/O port or memory
+vendor, and device IDs, as well as based on whether it uses an I/O port or memory
 mapped port I/O regions. The device class specifies what type of device it is.
 This is checked so that some special initialisation can be done if the device
 is a network controller. Vendor ID and Device ID are checked additionally if
 needed - these designate the exact brand and model of the device. The
 difference between port mapped and memory mapped I/O regions is that the memory
 mapped ones use the same bus as memory and use the same set of instructions to
-store and load whilst the port mapped use special port bus and adequately use
+store and load, whilst the port mapped use special port bus and adequately use
 different instructions for reading and writing than normal memory.
 
 Finally the \emph{main} function calls in an infinite loop the \emph{execute}
@@ -272,12 +272,12 @@ address spaces.
 
 In this section I will explain what changes have been made by professor
 Schubiger in order to make PenPoint OS work in the JPC emulator, as well as how
-they work. First I will show the overview of what has been changed and then
+they work. First I will offer an overview of what has been changed and then
 I will describe in detail three classes representing components of the NCR
 System 3125 that were necessary for the purposes of its emulation.
 
 To configure the object of the \emph{PC} class that represents the emulated
-machine a class extending \emph{PCConfig} - the \emph{NCR3125} class -  was
+machine, a class extending \emph{PCConfig} - the \emph{NCR3125} class -  was
 created. It also provides the entry point - the \emph{main} function - to this
 modified version of JPC. It is pretty much the same as the original, but
 slimmed down by removing all of the argument parsing. The \emph{PC} class
@@ -349,10 +349,10 @@ interfaces: \emph{IODevice}, \emph{IMouseHandler} and \emph{TimerResponsive}.
 
 The \emph{IMouseHandler} interface requires only one method: \emph{mouseEvent},
 which is called to update the state of the pointer. It receives the coordinates
-of the pointer as well as the displacement, and also int \emph{buttons} with
-bits corresponding to pressed down  buttons set. Particularly if the first bit
-is set it means that the pen is firmly against the digitizer and if the second
-or third bit is set it means that the button on the pen is pressed.
+of the pointer, as well as the displacement, and also int \emph{buttons} with
+bits set corresponding to pressed down buttons. Particularly, if the first bit
+is set, this means that the pen is firmly against the digitizer and if the second
+or third bit is set, this means that the button on the pen is pressed.
 
 \begin{codeblock}
     \lstinputlisting[
@@ -484,20 +484,20 @@ This ``packet'' is then read by 8 bit I/O reads from the data register.
 %\end{minipage}
 
 The \emph{Timer} object is created from the \emph{Clock} object. The
-\emph{Clock} object along with \emph{InterruptController} and
-\emph{IDisplayAdapter} are obtained and set during the component initialisation
+\emph{Clock} object, along with \emph{InterruptController} and
+\emph{IDisplayAdapter}, are obtained and set during the component initialisation
 stage performed by the \emph{PC} object by calling \emph{acceptComponent}
 method. The \emph{IDisplayAdapter} is used to get dimensions of the display in
 the \emph{mouseEvent} method, and the \emph{InterruptController} is used to
 raise interrupt when the ``packet'' is filled and unset it when the ``packet''
 is wholly read. Apart from these objects, an instance of \emph{IOPortHandler} is
 used to register \emph{NCRWacom} as capable for I/O using
-\emph{registerIOPortCapable}. What it means will be explained in the next
+\emph{registerIOPortCapable}. What this means will be explained in the next
 paragraph.
 
 Finally the \emph{IODevice} interface is the most important piece, as it
 provides all of the methods used for I/O, and this is where all of the changing
-the state of the device and most of the logic, as well as reporting of the
+of the state of the device and most of the logic, as well as reporting of the
 state will happen.
 
 \begin{codeblock}
@@ -539,7 +539,7 @@ state will happen.
 
 The \emph{NCRWacom} overrides three methods used for I/O. To let the
 \emph{IOPortHandler} object know what ports are needed, \emph{ioPortsRequested}
-method is used. Apart from that methods for 8 bit read and write are provided:
+method is used. Apart from that, methods for 8 bit read and write are provided:
 \emph{ioPortRead8} and \emph{ioPortWrite8}. The \emph{ioPortRead8} allows
 reading from two addresses: the status register returns if the device is ready
 for command (always set), and if data - the ``packet'' is ready; the data
@@ -547,7 +547,7 @@ register contains either a set of predefined values if it was not previously
 read or if \emph{NCR\_ECHOBACK} command was issued, or else it contains
 consecutive bytes of the ``packet''. Otherwise implementation of
 \emph{ioPortRead8} from the superclass - \emph{AbstractHardwareComponent} is
-called which just prints to console.
+called, which just prints to console.
 
 The \emph{ioPortWrite8} writes to either data register which is a noop or to
 command register, otherwise again the write is delegated to the superclass
@@ -672,7 +672,7 @@ change interval at which the \emph{Timer} callbacks are set to occur.
 The interesting thing about the \emph{Intel82360SL} class is that it does not
 implement all of the functionality of a processor. In fact it is very simple
 and short - all of its logic is contained in 8 bit and 16 bit I/O port read and
-write functions. Instead it is added as a component in addition to the default
+write functions. Instead, it is added as a component in addition to the default
 \emph{Processor} class used by \emph{PC} class.
 
 The 8 bit write function - \emph{ioPortWrite8} - if called with a write to
@@ -715,9 +715,9 @@ written value is stored in \emph{cpupwrmode}.
     ]{Intel82360SL.java}
 \end{codeblock}
 
-Similarly when configuration space is both unlocked and selected unit is
-enabled 8 bit writes to \emph{CFGINDEX} store the value written to \emph{idx}
-which is later used in case of 8 bit write to \emph{CFGDATA} which stores write
+Similarly, when configuration space is both unlocked and selected unit is
+enabled 8 bit writes to \emph{CFGINDEX} store the value written to \emph{idx},
+which is later used in the case of 8 bit write to \emph{CFGDATA} which stores write
 data into \emph{regs} under previously selected \emph{idx}.
 
 \begin{codeblock}
@@ -728,18 +728,18 @@ data into \emph{regs} under previously selected \emph{idx}.
     ]{Intel82360SL.java}
 \end{codeblock}
 
-In the default case the write is delegated to the 16 bit version of the
+In the default case, the write is delegated to the 16 bit version of the
 function by converting the address to 16 bit version through making the address
 even by zeroing the lowest bit, performing a 16 bit read from the address to
 obtain the other 8 bits, and performing 16 bit write with combined data of the
 original write with the value of the other byte. This results in calling the
-superclass counterpart of this method which simply performs printing to
+superclass counterpart of this method, which simply performs printing to
 console, since the only address handled by the 16 bit write method is
-\emph{CPUPWRMODE} which is also covered by the 8 bit version.
+\emph{CPUPWRMODE}, which is also covered by the 8 bit version.
 
 The 8 bit read function allows to obtain value of \emph{cfgtstat} by reading
 from address \emph{CFGSTAT}. This variable is never used nor initialised so it
-seems like to be a mistake. Reading from address \emph{CFGDATA} bears value
+seems to be a mistake. Reading from address \emph{CFGDATA} bears value
 stored in \emph{regs} at index \emph{idx}. Four addresses 0xFFF9, 0xFFFB,
 0xFFFD, and 0xFFFF always contain 0. For all other addresses the read is
 delegated to the 16 bit version of the function with aligning the address to 16
@@ -754,8 +754,8 @@ bits and masking and shifting the result to convert it back to 8 bits.
 \end{codeblock}
 
 The \emph{ioPortWrite16} method allows for writing to \emph{CPUPWRMODE}
-address. Otherwise it reverts to using the superclass implementation which just
-logs the write. Analogically to the 8 bit version increases the \emph{unlock}
+address. Otherwise it reverts to using the superclass implementation, which just
+logs the write. Analogically to the 8 bit version it increases the \emph{unlock}
 and updates the value of \emph{cpupwrmode} with data written, but it adds to
 \emph{unlock} when its value is equal to 2 instead of 1 like the
 \emph{ioPortWrite8} does.
@@ -783,13 +783,13 @@ card with minor modifications.
 The \emph{CLGD6410} class is pretty much a copy of the \emph{VGACard} class
 with additional functionality provided by the class \emph{DefaultVGACard}
 included as well. The \emph{DefaultVGACard} normally extends the \emph{VGACard}
-class with some utility functions like getting display dimensions, saving
+class with some utility functions, like getting display dimensions, saving
 screenshots or adding monitors. The object of that class is then normally used
-as one of the components of a PC. Apart from that all of the PCI and interrupt
+as one of the components of a PC. Apart from that, all of the PCI and interrupt
 request code is removed, VRAM size is changed, and new addresses for I/O are
 added, as well as a bunch of requested I/O ports are used in addition to the
 ones in the default implementation. The VGA RAM size is changed from 16M to
-256K. Finally there are added new addresses for graphics, sequencer, attribute,
+256K. Finally, new addresses are added for graphics, sequencer, attribute,
 and crt registers to write, as well as new possible values that could be
 written.
 
@@ -807,22 +807,22 @@ in the patch.
 \subsection{The QEMU hypervisor}
 
 The QEMU emulator is a much more complex piece of software than the JPC
-emulator. It has multiple target host and guest architectures - that is it is
-possible for QEMU to run on many differing types of machines, as well as it is
+emulator. It has multiple target host and guest architectures - that is, it is
+possible for QEMU to run on many diverse types of machines, as well as it is
 possible to emulate different computer types. QEMU also offers utility tools
-used for emulation purposes like creation of disk images, as well as provides
+used for emulation purposes, such as creation of disk images, as well as provides
 programs both for system emulation and for user emulation - meaning an emulator
 for a whole system or or an emulator for a single executable that was compiled
 for a different architecture. What is more, QEMU is not only an emulator but it
-is actually a hypervisor. In this case it means that the emulation is not
+is actually a hypervisor. In this case, this means that the emulation is not
 necessarily done in software only but is also ``hardware accelerated'' in some
 way. QEMU has the ability to run guest instructions directly on host hardware
 with tiny or negligible overhead.  This can be achieved by using special host
 instructions meant for virtualization, and trapping signals. QEMU is also
-written in the C programming language which by its nature is fast, and it also
-allows for careful optimization by hand whether by using handwritten assembly or
+written in the C programming language, which by its nature is fast, and it also
+allows for careful optimization by hand, whether by using handwritten assembly or
 by using compiler intrinsics. What is more, QEMU is a free libre open source
-software that is actively developed by the community, and many big firms are
+software that is actively developed by the community and many big firms are
 interested in its improvement. All of that makes QEMU's performance unbeatable,
 but also makes for a plethora of other problems and complications.
 
@@ -832,9 +832,9 @@ source projects neglect creating and maintaining documentation, and in case of
 projects that often require expert knowledge like that one such behaviour has
 a byproduct of filtering out people that would not be adequately equipped to
 work on them, QEMU has a rather good documentation even if sometimes lacking or
-outdated, at least in comparison to others similarly specialised projects. This
-combined with the immense performance that QEMU offers makes it suitable for
-building modifications that would allow it to run PenPoint OS on modern
+outdated, at least in comparison to others similarly specialised projects. This,
+combined with the immense performance that QEMU offers, makes it suitable for
+building modifications that would make it possible to run PenPoint OS on modern
 hardware with necessary speed for comfortable use.
 
 In the following sections I will explain how QEMU operates, show the process of
@@ -843,34 +843,34 @@ system works.
 
 \subsubsection{Operation of QEMU}
 
-In order to support many target host and guest architectures it is necessary to
+In order to support many target host and guest architectures, it is necessary to
 decouple implementation of one from the other - perform some sort of ``strength
 reduction'' - instead of creating a combination of all possible pairs of host
-and guest it is only required to provide a sum by using an universal
-intermediate step. This way the host backend has to only translate host
+and guest, it is only required to provide a sum by using an universal
+intermediate step. This way the host backend only has to translate host
 instructions to one special set of instructions and from there guest frontend
 only has to convert from one special set of instructions. Doing it this way has
 also the added benefit of adding a new host, new guest or modifying
 implementation of existing one without having to change anything else. This is
-what Tiny Code Generator (TCG) does. As it turns out this also helps with
+what Tiny Code Generator (TCG) does. As it turns out, this also helps with
 performance optimization.
 
 A basic mode of operation for translating opcodes in an intermediate manner
 would be to fetch and convert the instruction. Then some sort of code
 initialising the execution environment would be performed, the instruction would
-be run, and finally a cleanup would occur. QEMU in order to increase the speed
-of execution fetches multiple instructions at a time for translation.  These
+be run, and finally a cleanup would occur. In order to increase the speed of
+execution, QEMU fetches multiple instructions at a time for translation.  These
 portions of instructions are then converted to what is called a Translation
 Block (TB). A Translation Block is created when a branch instruction is
 encountered or the internal state of the processor that would affect the
 execution is changed. That means that TB's have only a single exit point. It is
-not possible to jump to the middle of a Translation Block. In such a situation
+not possible to jump to the middle of a Translation Block. In such a situation,
 a new TB would have to be created. This means that one Translation Block can
-have only one entry and one exit point. After a TB is created it is inserted
-into cache. That way next time QEMU needs to execute an instruction it can check
+have only one entry and one exit point. After a TB is created, it is inserted
+into cache. That way, the next time QEMU needs to execute an instruction it can check
 if the corresponding Translation Block was already ready, and completely skip
-that stage if possible. In order to execute a TB the execution environment must
-be set up. This is the ``prologue''. After the TB finishes a cleanup must be
+that stage if possible. In order to execute a TB, the execution environment must
+be set up. This is the ``prologue''. After the TB finishes, a cleanup must be
 performed. This is the ``epilogue''. Because these ``prologues'' and
 ``epilogues'' can be quite costly performance wise QEMU can chain multiple TBs
 together without ``prologues'' and ``epilogues'' in between. QEMU also performs
@@ -879,22 +879,22 @@ several optimizations on the Translation Blocks such as dead code elimination
 
 \subsubsection{Adding a device code to the QEMU source tree}
 
-QEMU uses an object oriented approach for defining new devices which would be
-great if it wasn't for the fact that QEMU is written in C programming language.
-What it means is that all of the inheritance and method overriding must be done
-by hand by the programmer. But that's not all. For this to work all of that has
+QEMU uses an object oriented approach for defining new devices, which would be
+great, if it wasn't for the fact that QEMU is written in C programming language.
+What this means is that all of the inheritance and method overriding must be done
+by hand by the programmer. But that is not all. For this to work, all of that has
 to be passed around by either opaque void pointers or pointers to the base
-class and stringly type-checked at runtime. Unfortunately there does not really
+class and stringly type-checked at runtime. Unfortunately, there does not really
 exist any official documentation for creating new devices apart from a general
-QEMU Object Model (QOM) overview that only describes the process of registering
-a new type. Best we can do is to analyse source code of the educational device
+QEMU Object Model (QOM) overview, which only describes the process of registering
+a new type. The best we can do is to analyse source code of the educational device
 that exists in QEMU repository or read through comments of many source header
 files located in different places associated with device creation.
 
-In order for the device to be available to QEMU it has to be registered. The
-way to do this is to create an object that describes the type of said device.
-It contains the parent class as well as information on how both the object
-representing class of the device, and object representing instance of the
+In order for the device to be available to QEMU, it has to be registered. The
+way to do this is to create an object that describes the type of the relevant device.
+It contains the parent class, as well as information on how both the object
+representing class of the device and object representing instance of the
 device should be instantiated. Inside the class initialization function all of
 the additional data needed to create an instance of the class has to be set, as
 well as all of the information required by the parent class. The instance setup
@@ -912,19 +912,19 @@ works and how to add a device to be compiled.
 
 \subsubsubsection{Simple example device implementation}
 
-First thing to do when creating a new device in QEMU is to create structs that
+The first thing to do when creating a new device in QEMU is to create structs that
 will represent the class and the state of an instance of the device. The object
 representing the class should hold all of the methods - the virtual  table, as
 well as all of the data associated with the class. The instance struct ought to
 contain the internal state of the device. As opposed to the instance struct
-objects of which are created for every device the class struct is created only
-once for every device type. To declare the new object type a macro
+objects which are created for every device, the class struct is created only
+once for every device type. To declare the new object type, a macro
 \emph{OBJECT\_DECLARE\_TYPE} is used with the instance struct, class struct,
 and the name of the module. This macro provides the standard type casting
 functions and registers the instance struct to be used with \emph{g\_autoptr}
 so that it is cleaned up properly. The \emph{TYPE\_TEST} string will be used to
 specify this device on the QEMU command line, and although not directly
-specified it is used for type checking in the casting functions defined by
+specified, it is used for type checking in the casting functions defined by
 \emph{OBJECT\_DECLARE\_TYPE}.
 
 \begin{codeblock}
@@ -952,8 +952,8 @@ creating a variable of type \emph{TypeInfo} that contains all the necessary
 information about the type for its instantiation: the sizes and constructors
 for the instance and class objects, as well as the base class and name used to
 specify this device on command line. A function that will register this type by
-passing this variable as argument has to be defined. And finally using a macro
-\emph{type\_init} this function is added to the list of functions to be run at
+passing this variable as argument has to be defined. And finally, using a macro
+\emph{type\_init}, this function is added to the list of functions to be run at
 startup so that it is called before main.
 
 \begin{codeblock}
@@ -970,7 +970,7 @@ The educational device was created for use in the linux kernel course at
 Masaryk University. It is a simple PCI device that can respond to reads and
 writes, generates interrupts and performs Direct Memory Access (DMA).
 
-Similarly to the example device from the previous section it defines the
+Similarly to the example device from the previous section, it defines the
 instance struct and uses a macro to generate the casting functions. It does not
 define any class struct because it uses \emph{PCIDeviceClass} without any
 modifications. For the same reason \emph{DECLARE\_INSTANCE\_CHECKER} macro can
@@ -1171,7 +1171,7 @@ register.
 \end{codeblock}
 
 \noindent
-If it is commanded to finish it breaks out of the infinite loop.
+If it is commanded to finish, it breaks out of the infinite loop.
 
 \begin{codeblock}
     \lstinputlisting[
@@ -1194,9 +1194,9 @@ a computation loop.
 \end{codeblock}
 
 \noindent
-After that is done the value in the factorial register is updated. If an
+After that is done, the value in the factorial register is updated. If an
 interrupt request was set using the status register to be issued after
-computation of factorial was completed it is done so now.
+computation of factorial was completed this is done now.
 
 \begin{codeblock}
     \lstinputlisting[
@@ -1207,7 +1207,7 @@ computation of factorial was completed it is done so now.
 \end{codeblock}
 
 There is also support for Direct Memory Access. Whenever a value is written to
-the DMA command register a timer is set to run the \emph{edu\_dma\_timer}
+the DMA command register, a timer is set to run the \emph{edu\_dma\_timer}
 callback after 100 nanoseconds.
 
 \begin{codeblock}
@@ -1230,10 +1230,10 @@ callback after 100 nanoseconds.
     ]{edu.c}
 \end{codeblock}
 
-The \emph{edu\_dma\_timer} function performs either read or write based on the
+The \emph{edu\_dma\_timer} function performs either read or write, based on the
 contents of the DMA command register from the address set by the DMA source
 register to the address set by the DMA destination register. Then an interrupt
-request is raised based again on the value of the DMA command register.
+request is raised, based again on the value of the DMA command register.
 
 \begin{codeblock}
     \lstinputlisting[
@@ -1248,7 +1248,7 @@ request is raised based again on the value of the DMA command register.
 The QEMU build system is extremely convoluted. It probably started as something
 that had to support a large number of targets, architectures and configuration
 options but was reasonable, but then it grew and after years it became
-unrecognisable. The build process is done in three stages but to the user it
+unrecognisable. The build process is done in three stages, but to the user it
 takes two steps. It uses a meta build system, two build systems and a configure
 script underneath. The first stage is the configure script. It is a standard
 script written in POSIX SH. It is used to determine the local build
@@ -1258,12 +1258,12 @@ characteristics. Meson also processes \emph{Kconfig} and \emph{*.mak} files
 that describe the dependencies among various features and subsystems. The
 \emph{Kconfig} files use almost the same language as the linux kernel
 \emph{Kconfig} files but only so slightly different. The output of the Meson
-stage are \emph{build.ninja} files but the ninja build tool is not used
-directly.  Instead the files are used to synthesise rules for Make. The final
+stage are \emph{build.ninja} files, but the ninja build tool is not used
+directly.  Instead, the files are used to synthesise rules for Make. The final
 stage and also the second step for the user is to run Make with the rules
 created from the ninja file \cite{qemu2022}.
 
-In order to make the simple example device defined before available to QEMU at
+In order to make the simple example device defined before becoming available to QEMU at
 runtime it is only necessary to create a new entry in the \emph{Kconfig} file
 in the parent directory of where the source file for the device is located. In
 this case a simple \emph{default y} states that the configuration option this
@@ -1280,7 +1280,7 @@ entry denotes will always be true.
 \noindent
 We can do it this way because the device does not depend on anything, does not
 provide anything, and frankly does not do anything. Had it more complicated
-dependency relationships one would have to use the \emph{Kconfig} to specify
+dependency relationships, one would have to use the \emph{Kconfig} to specify
 dependencies, reverse dependencies, default and conditionally default values.
 The next step is to modify the \emph{meson.build} file to add the new source
 file to the appropriate sourceset if the configuration option created in the
@@ -1295,7 +1295,7 @@ file to the appropriate sourceset if the configuration option created in the
 \end{codeblock}
 
 \noindent
-Now after the changes to the \emph{Kconfig} and \emph{meson.build} files the
+Now, after the changes to the \emph{Kconfig} and \emph{meson.build} files, the
 newly created device can be specified on the command line. The output shows
 that a class is initialised  once but an instance is created twice - for each
 device specified \ref{fig:qemu-test-device-output}.
@@ -1318,8 +1318,8 @@ device specified \ref{fig:qemu-test-device-output}.
 %use. This was also motivated by the fact that a more straightforward solution,
 %which will be discussed in the next chapter,  presented itself.
 
-In the end the issues with the modified JPC emulator, and the unnecessary
-complexity that fell outside the scope of this work I decided to consider
+In the end, because of the issues with the modified JPC emulator, and the unnecessary
+complexity that fell outside the scope of this work, I decided to consider
 a different approach.  In the next chapter a more straightforward and less error
 prone solution that uses a developer SDK version of PenPoint OS is discussed.
 
